# projet-perso

./: Diagramme sans nom.drawio
Gallium/: CMakeLists.txt  main.cpp
Gallium/epic/entity/movable/: BaseCharacter.hpp  Character.cpp  Character.hpp
Gallium/epic/entity/static/: StaticObject.hpp
Gallium/epic/event/: EventObserver.hpp
Gallium/epic/nature/: Environment.cpp  Environment.hpp  light.txt
Gallium/epic/physics/: PhysicsFrameListener.hpp  PhysicsManager.cpp  PhysicsManager.hpp  WCollisionListener.hpp
Gallium/epic/reflect/: Reflectable.hpp  Reflectable.tpp
Gallium/media/config/character/: fire.yaml  vln.yaml
Gallium/media/materials/scripts/: GroundMaterial.material  SkyBox.material
Gallium/media/models/Bag/: Backpack_aiStandardSurface1.material  Bag.material  Denim.material  Zipper.material  bag.mesh  blender2ogre.scene
Gallium/media/models/Book/: MeshSG.material  blender2ogre.scene  magicbook.mesh
Gallium/media/models/Mo/: Mo.material  Mo.mesh  OgreXMLConverter.scene
Gallium/media/models/TimeMachine/: Sketchfab_2018_03_20_15_32_07.scene  metal.material
Gallium/media/models/VLN002/: MAT_Player_Body.material  MAT_Player_Coat_Cloth.material  MAT_Player_Hair.001.material  TEX_Six_Hair_D.scene  VLN.002.mesh  VLN.002.skeleton
Gallium/media/models/YellowBag/: blender2ogre.scene  lambert1.material  yellowBag.mesh
Gallium/media/models/fire-controller/: FIRE_COMMANDER.material  FireCommand.mesh  FireCommand.skeleton  blender2ogre.scene  tracks.material
Gallium/media/models/kingdomkey/: Blue_Metal.material  Cylinder_Yellow.material  Metal.material  (+5 more)
(+369 files in other folders)
